--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@firebase/auth": "^0.20.5",
     "bootstrap": "^5.2.0",
     "firebase": "^9.9.1",
+    "ngx-cookie-service": "^14.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
